--- a/assets/style/layout/_nav.scss
+++ b/assets/style/layout/_nav.scss
@@ -1,4 +1,4 @@
-nav {
+.navbar {
     background: rgba(26, 26, 26, 0.75);
     @include childCenter;
     width: 100%;
@@ -8,9 +8,10 @@ nav {
     z-index: 100;
     backdrop-filter: saturate(180%) blur(20px);
 
-    .logosymbol {
+    &__logoSymbol {
         position: absolute;
-        left: 15px;
+        left: 14px;
+        top: 9px;
     }
 
     p {
@@ -23,20 +24,6 @@ nav {
         margin: 0 25px 0 53px;
         position: relative;
         z-index: 100;
-
-        li {
-            margin-right: 27px;
-
-            a {
-                font-weight: 500;
-                line-height: 16px;
-                position: relative;
-
-                img {
-                    vertical-align: 4%;
-                }
-            }
-        }
 
         &:before {
             content: "";
@@ -57,7 +44,79 @@ nav {
         }
     }
 
-    .globe {
+    li {
+        margin-right: 27px;
+
+        a {
+            font-weight: 500;
+            line-height: 16px;
+            position: relative;
+        }
+    }
+
+    img {
+        vertical-align: 4%;
+    }
+
+    &__menu {
+        visibility: hidden;
+        position: absolute;
+        bottom: -305px;
+        background: $white;
+        padding: 20px 0 0;
+        border-radius: 5px;
+        opacity: 0;
+        width: 315px;
+        transition: 0.3s ease;
+        transform: translateY(-10px);
+        z-index: 1;
+
+        &-content {
+            margin-bottom: 15px;
+            height: 55px;
+            padding-top: 8px;
+            transition: 0.4s ease;
+            cursor: pointer;
+
+
+            h3 {
+                color: $black2;
+                font-size: 1rem;
+                font-weight: 500;
+                margin-bottom: 6px;
+                line-height: 16px;
+                margin-left: 22px;
+            }
+
+            p {
+                color: #7f7f7f;
+                font-size: 0.9rem;
+                font-weight: 400;
+                line-height: 16px;
+                margin-left: 22px;
+            }
+
+            &:hover {
+                background: #ebebeb;
+            }
+        }
+
+        &--build {
+            left: 730px;
+        }
+
+        &--use {
+            left: 810px;
+        }
+
+        &--resources {
+            bottom: -237px;
+            left: 880px;
+            width: 287px;
+        }
+    }
+
+    &__globe {
         height: 28px;
 
         img {
@@ -72,156 +131,24 @@ nav {
             }
 
         }
-    }
 
-    .build-nav {
-        visibility: hidden;
-        position: absolute;
-        bottom: -305px;
-        left: 730px;
-        background: $white;
-        width: 315px;
-        padding: 20px 0 0;
-        border-radius: 5px;
-        opacity: 0;
-        transition: 0.3s ease;
-        transform: translateY(-10px);
-        z-index: 1;
-
-        .build-nav-content {
-            margin-bottom: 15px;
-            height: 55px;
-            padding-top: 8px;
-            transition: 0.4s ease;
-            cursor: pointer;
-
-            h3 {
-                color: $black2;
-                font-size: 1rem;
-                font-weight: 500;
-                margin-bottom: 6px;
-                line-height: 16px;
-                margin-left: 22px;
-            }
+        &-menu {
+            visibility: hidden;
+            position: absolute;
+            bottom: -325px;
+            right: 20px;
+            background: $white;
+            width: 140px;
+            padding: 27px 0 15px;
+            border-radius: 10px;
+            opacity: 0;
+            transition: 0.2s ease;
+            z-index: 1;
+            text-align: center;
 
             p {
-                color: #7f7f7f;
-                font-size: 0.9rem;
-                font-weight: 400;
-                line-height: 16px;
-                margin-left: 22px;
+                margin-bottom: 12px;
             }
-
-            &:hover {
-                background: #ebebeb;
-            }
-        }
-    }
-
-    .use-nav {
-        visibility: hidden;
-        position: absolute;
-        bottom: -305px;
-        left: 810px;
-        background: $white;
-        width: 315px;
-        padding: 20px 0 0;
-        border-radius: 5px;
-        opacity: 0;
-        transition: 0.2s ease;
-        transform: translateY(-10px);
-        z-index: 1;
-
-        .use-nav-content {
-            margin-bottom: 15px;
-            height: 55px;
-            padding-top: 8px;
-            transition: 0.3s ease;
-            cursor: pointer;
-
-            h3 {
-                color: $black2;
-                font-size: 1rem;
-                font-weight: 500;
-                margin-bottom: 6px;
-                line-height: 16px;
-                margin-left: 22px;
-            }
-
-            p {
-                color: #7f7f7f;
-                font-size: 0.9rem;
-                font-weight: 400;
-                line-height: 16px;
-                margin-left: 22px;
-            }
-
-            &:hover {
-                background: #ebebeb;
-            }
-        }
-    }
-
-    .resources-nav {
-        visibility: hidden;
-        position: absolute;
-        bottom: -237px;
-        left: 880px;
-        background: $white;
-        width: 287px;
-        padding: 20px 0 0;
-        border-radius: 5px;
-        opacity: 0;
-        transition: 0.2s ease;
-        transform: translateY(-10px);
-        z-index: 1;
-
-        .resources-nav-content {
-            margin-bottom: 15px;
-            height: 55px;
-            padding-top: 8px;
-            transition: 0.3s ease;
-            cursor: pointer;
-
-            h3 {
-                color: $black2;
-                font-size: 1rem;
-                font-weight: 500;
-                margin-bottom: 6px;
-                line-height: 16px;
-                margin-left: 22px;
-            }
-
-            p {
-                color: #7f7f7f;
-                font-size: 0.9rem;
-                font-weight: 400;
-                line-height: 16px;
-                margin-left: 22px;
-            }
-
-            &:hover {
-                background: #ebebeb;
-            }
-        }
-    }
-
-    .globe-nav {
-        visibility: hidden;
-        position: absolute;
-        bottom: -325px;
-        right: 20px;
-        background: $white;
-        width: 140px;
-        padding: 27px 0 15px;
-        border-radius: 10px;
-        opacity: 0;
-        transition: 0.2s ease;
-        z-index: 1;
-        text-align: center;
-
-        p {
-            margin-bottom: 12px;
 
             a {
                 color: $blackf;
