--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     padding: 60px 0 120px;
 
-    .news-container {
+    &__container {
         max-width: 1110px;
 
         h2 {
@@ -13,154 +13,156 @@
             margin-bottom: 25px;
         }
 
-        .news-btn {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 30px;
-            width: 1130px;
+        &-top {
 
-            .btn-news {
-                padding: 50px 45px 20px 20px;
-                border-radius: 20px;
-                opacity: 0.8;
-                cursor: pointer;
-                transition: 0.3s ease;
-                display: block;
+            &-buttonsContainer {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 30px;
+                width: 1130px;
+
+                &-btn {
+                    padding: 50px 45px 20px 20px;
+                    border-radius: 20px;
+                    opacity: 0.8;
+                    cursor: pointer;
+                    transition: 0.3s ease;
+                    display: block;
+
+                    &--red {
+                        background: url("../img/newsorange.png") center/cover;
+                    }
+
+                    &--green {
+                        background: url("../img/newsteal.png") center/cover;
+                    }
 
 
-                &:hover {
-                    opacity: 1;
-                    scale: 1.03;
-                    border-radius: 17px;
-                }
+                    &--blue {
+                        background: url("../img/newsblue.png") center/cover;
+                    }
 
-                h4 {
-                    color: $blackf;
-                    opacity: 0.6;
-                }
 
-                h2 {
-                    font-size: 1.2rem;
-                    padding-top: 6px;
-                    max-width: 200px;
-                    margin-bottom: 0;
-                    line-height: 20px;
-                    opacity: 1;
-                }
-            }
+                    &--purple {
+                        background: url("../img/newspurple.png") center/cover;
+                    }
 
-            .red {
-                background: url("../img/newsorange.png") center/cover;
+                    &:hover {
+                        opacity: 1;
+                        scale: 1.03;
+                        border-radius: 17px;
+                    }
 
-                h2 {
-                    opacity: 1;
-                }
-            }
+                    h4 {
+                        color: $blackf;
+                        opacity: 0.6;
+                    }
 
-            .green {
-                background: url("../img/newsteal.png") center/cover;
-            }
-
-            .blue {
-                background: url("../img/newsblue.png") center/cover;
-            }
-
-            .purple {
-                background: url("../img/newspurple.png") center/cover;
-            }
-        }
-
-        .news-partnairs {
-            margin-top: 100px;
-            display: flex;
-            justify-content: space-between;
-            padding-bottom: 90px;
-            border-bottom: 1px solid $grey4;
-
-            a {
-                transition: 0.2s;
-                transform: translate3D(0px, 100%, 0px);
-                opacity: 0;
-                animation: newsAnim 1.5s both;
-
-                &:hover {
-                    opacity: 0.7;
-                    scale: 0.95;
-                }
-
-                @keyframes newsAnim {
-                    to {
-                        transform: none;
+                    h2 {
+                        font-size: 1.2rem;
+                        padding-top: 6px;
+                        max-width: 200px;
+                        margin-bottom: 0;
+                        line-height: 20px;
                         opacity: 1;
                     }
                 }
-
-                img {
-                    height: 25px;
-                }
             }
 
+            &-partnairs {
+                margin-top: 100px;
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 90px;
+                border-bottom: 1px solid $grey4;
+
+                a {
+                    transition: 0.2s;
+                    transform: translate3D(0px, 100%, 0px);
+                    opacity: 0;
+                    animation: newsAnim 1.5s both;
+
+                    &:hover {
+                        opacity: 0.7;
+                        scale: 0.95;
+                    }
+
+                    @keyframes newsAnim {
+                        to {
+                            transform: none;
+                            opacity: 1;
+                        }
+                    }
+
+                    img {
+                        height: 25px;
+                    }
+                }
+            }
         }
 
-        .news-network {
+        &-bottom {
             display: flex;
             justify-content: space-between;
             margin-top: 60px;
 
-            .network-live {
+            &-text {
                 max-width: 450px;
-            }
 
-            h2 {
-                line-height: 1.1;
-                letter-spacing: -2px;
-                margin-bottom: 30px;
-            }
+                h2 {
+                    line-height: 1.1;
+                    letter-spacing: -2px;
+                    margin-bottom: 30px;
+                }
 
-            p {
-                margin-bottom: 40px;
-                font-size: 1.2rem;
-                line-height: 1.4;
-                opacity: 0.8;
-            }
-
-            .network-btn {
-                color: $white;
-                padding: 16px 26px;
-                border-radius: 8px;
-                font-weight: 600;
-                font-size: 1.1rem;
-                transition: 0.2s;
-                cursor: pointer;
-                background-color: $color3;
-                display: inline-block;
-
-                &:hover {
+                p {
+                    margin-bottom: 40px;
+                    font-size: 1.2rem;
+                    line-height: 1.4;
                     opacity: 0.8;
-                    transform: translateY(2px);
+                }
+
+                &-btn {
+                    color: $white;
+                    padding: 16px 26px;
+                    border-radius: 8px;
+                    font-weight: 600;
+                    font-size: 1.1rem;
+                    transition: 0.2s;
+                    cursor: pointer;
+                    background-color: $color3;
+                    display: inline-block;
+
+                    &:hover {
+                        opacity: 0.8;
+                        transform: translateY(2px);
+                    }
                 }
             }
-        }
 
-        .numbs-content {
-            text-align: right;
-            margin-bottom: 40px;
+            &-numbers {
+                text-align: right;
+                margin-bottom: 40px;
 
-            h4 {
-                color: #888888;
-                font-size: 1rem;
-                text-transform: uppercase;
-                line-height: 1.4;
-                letter-spacing: 1px;
-                margin-bottom: 10px;
-                font-weight: 600;
-            }
+                &-content {
 
-            h3 {
-                font-size: 2.8rem;
-                letter-spacing: 0;
-                margin-bottom: 10px;
-                line-height: 1.2;
+                    h4 {
+                        color: #888888;
+                        font-size: 1rem;
+                        text-transform: uppercase;
+                        line-height: 1.4;
+                        letter-spacing: 1px;
+                        margin-bottom: 10px;
+                        font-weight: 600;
+                    }
+
+                    h3 {
+                        font-size: 2.8rem;
+                        letter-spacing: 0;
+                        margin-bottom: 10px;
+                        line-height: 1.2;
+                    }
+                }
             }
         }
     }
