--- a/assets/style/layout/_section2.scss
+++ b/assets/style/layout/_section2.scss
@@ -4,7 +4,7 @@
     padding-bottom: 60px;
     z-index: 2;
 
-    .mine-bandereau {
+    &__bandereau {
         background: url("../img/minebg2.jpg") center/cover;
         width: 101%;
         height: 600px;
@@ -19,92 +19,96 @@
         }
     }
 
-    .mine-content {
+    &__container {
         max-width: 1100px;
         margin: 0 auto;
 
-        .mine-content-top {
+        &-main {
             display: grid;
             grid-template-columns: 50% 50%;
-        }
 
-        .mine-content-left {
-            h2 {
-                font-size: 10rem;
-                letter-spacing: -10px;
-                margin-bottom: 10px;
-                line-height: 1.1;
-            }
+            &-text {
 
-            h3 {
-                font-size: 2.8rem;
-                color: $greyf2;
-                line-height: 1.1;
-                letter-spacing: -2px;
-                margin-bottom: 30px;
-                max-width: 500px;
-            }
+                h2 {
+                    font-size: 10rem;
+                    letter-spacing: -10px;
+                    margin-bottom: 10px;
+                    line-height: 1.1;
+                }
 
-            p {
-                margin-bottom: 20px;
-                font-size: 1.2rem;
-                line-height: 1.4;
-                opacity: 0.8;
-                max-width: 540px;
-            }
+                h3 {
+                    font-size: 2.8rem;
+                    color: $greyf2;
+                    line-height: 1.1;
+                    letter-spacing: -2px;
+                    margin-bottom: 30px;
+                    max-width: 500px;
+                }
 
-            .network-btn {
-                color: $white;
-                padding: 18px 26px;
-                border-radius: 8px;
-                font-weight: 600;
-                font-size: 1.1rem;
-                transition: 0.2s;
-                cursor: pointer;
-                background-color: $color3;
-                display: inline-block;
-                margin-top: 20px;
-
-                &:hover {
+                p {
+                    margin-bottom: 20px;
+                    font-size: 1.2rem;
+                    line-height: 1.4;
                     opacity: 0.8;
-                    transform: translateY(2px);
+                    max-width: 540px;
+                }
+
+                &-btn {
+                    color: $white;
+                    padding: 18px 26px;
+                    border-radius: 8px;
+                    font-weight: 600;
+                    font-size: 1.1rem;
+                    transition: 0.2s;
+                    cursor: pointer;
+                    background-color: $color3;
+                    display: inline-block;
+                    margin-top: 20px;
+
+                    &:hover {
+                        opacity: 0.8;
+                        transform: translateY(2px);
+                    }
+                }
+            }
+
+            &-img {
+
+                img {
+                    max-width: 36%;
+                    box-sizing: border-box;
+                    position: absolute;
+                    top: 500px;
                 }
             }
         }
 
-        img {
-            max-width: 36%;
-            box-sizing: border-box;
-            position: absolute;
-            top: 500px;
-        }
-
-        .mine-content-bottom {
+        &-bottom {
             display: flex;
             justify-content: space-between;
             text-align: center;
             margin: 130px 0 100px;
-        }
 
-        .mine-content-section {
-            background: $grey1;
-            padding: 26px 40px;
-            max-width: 355px;
-            border-radius: 10px;
+            &-element {
+                background: $grey1;
+                padding: 26px 40px;
+                max-width: 355px;
+                border-radius: 10px;
 
-            h4 {
-                font-size: 0.9rem;
-                text-transform: uppercase;
-                line-height: 1.4;
-                letter-spacing: 1px;
-                margin-bottom: 10px;
-            }
+                h4 {
+                    font-size: 0.9rem;
+                    text-transform: uppercase;
+                    line-height: 1.4;
+                    letter-spacing: 1px;
+                    margin-bottom: 10px;
+                }
 
-            p {
-                font-size: 1rem;
-                margin: 0 auto;
-                line-height: 1.4;
-                opacity: 0.8;
+                p {
+                    font-size: 1rem;
+                    margin: 0 auto;
+                    line-height: 1.4;
+                    opacity: 0.8;
+                }
             }
         }
     }
