--- a/assets/style/layout/_section3.scss
+++ b/assets/style/layout/_section3.scss
@@ -2,7 +2,7 @@
     position: relative;
     text-align: center;
 
-    .use-img {
+    &__header {
 
         img {
             width: 100%;
@@ -30,47 +30,48 @@
             margin: 0 auto 30px;
         }
     }
-}
 
-.use-content {
-    background: $white;
 
-    p {
-        color: $blackf;
-        font-size: 1.2rem;
-        line-height: 1.4;
-        opacity: 0.8;
-        margin: 0 auto 20px;
-        max-width: 720px;
-    }
+    &__main {
+        background: $white;
 
-    .div-btn {
-        display: flex;
-        z-index: 1;
-        justify-content: space-around;
-        max-width: 480px;
-        margin: 0 auto;
+        p {
+            color: $blackf;
+            font-size: 1.2rem;
+            line-height: 1.4;
+            opacity: 0.8;
+            margin: 0 auto 20px;
+            max-width: 720px;
+        }
 
-        .network-btn {
-            color: $white;
-            padding: 18px 26px;
-            border-radius: 8px;
-            font-weight: 600;
-            font-size: 1.1rem;
-            transition: 0.2s;
-            cursor: pointer;
-            background-color: $color3;
-            display: inline-block;
-            margin-top: 20px;
-            z-index: 100;
+        &-buttonsContainer {
+            display: flex;
+            z-index: 1;
+            justify-content: space-around;
+            max-width: 480px;
+            margin: 0 auto;
 
-            &:hover {
-                opacity: 0.8;
-                transform: translateY(2px);
-            }
+            .network-btn {
+                color: $white;
+                padding: 18px 26px;
+                border-radius: 8px;
+                font-weight: 600;
+                font-size: 1.1rem;
+                transition: 0.2s;
+                cursor: pointer;
+                background-color: $color3;
+                display: inline-block;
+                margin-top: 20px;
+                z-index: 100;
 
-            &.netgreen {
-                background: #15D188;
+                &:hover {
+                    opacity: 0.8;
+                    transform: translateY(2px);
+                }
+
+                &.netgreen {
+                    background: #15D188;
+                }
             }
         }
     }
