--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     height: 100vh;
-    background: #1d1d1d url("../svg/isoheaderbg.svg") center no-repeat;
+    background: url("../svg/isoheaderbg.svg") center no-repeat;
     background-size: cover;
     opacity: 0;
     animation: headerAnim 2.5s forwards;
@@ -33,7 +33,7 @@
             &-link {
                 background: linear-gradient(90.06deg, $color1 10.06%, $color2 92.17%);
                 padding: 10px;
-                border-radius: 7px;
+                border-radius: 6px;
                 cursor: pointer;
                 display: flex;
                 justify-content: space-between;
@@ -47,7 +47,7 @@
                 }
 
                 &:hover {
-                    background: linear-gradient(90.06deg, rgba(136, 22, 227, 0.7) 10.06%, rgba(213, 20, 159, 0.7) 92.17%);
+                    background: linear-gradient(90.06deg, rgba($color1, 0.7) 10.06%, rgba($color2, 0.7) 92.17%);
 
                     img {
                         opacity: 1;
@@ -82,35 +82,6 @@
                 display: flex;
                 justify-content: space-between;
                 max-width: 300px;
-
-                &-button {
-                    color: $blackf;
-                    padding: 16px 26px;
-                    border-radius: 8px;
-                    font-weight: 600;
-                    font-size: 1.1rem;
-                    transition: 0.2s;
-                    cursor: pointer;
-                    transform: translateY(0);
-                    display: block;
-
-                    &--blue {
-                        background: $color3;
-                    }
-
-                    &--purple {
-                        background: #A334FB;
-                    }
-
-                    &--green {
-                        background: $color5;
-                    }
-
-                    &:hover {
-                        opacity: 0.8;
-                        transform: translateY(2px);
-                    }
-                }
             }
         }
     }
