--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -4,11 +4,12 @@
 }
 
 $font1: 'Inter', sans-serif;
-$black1: #0D0D0D;
-$black2: #1D1D1D;
-$black3: #1B1B1B;
-$black4: #141617;
 $blackf: #111111;
+$black: #0D0D0D;
+$black2: #141617;
+$black3: #1A1A1A;
+$black4: #1B1B1B;
+$black5: #1D1D1D;
 $white: #FFFFFF;
 $grey1: #353535;
 $grey2: #383838;
@@ -47,15 +48,48 @@ $color7: #3B41E1;
     text-decoration: none;
 }
 
+body {
+    max-width: 100vw;
+    background: $black5;
+    height: 100vh;
+    text-align: left;
+}
+
 li {
     list-style: none;
 }
 
-body {
-    max-width: 100vw;
-    background: $black3;
-    height: 100vh;
-    text-align: left;
+.button {
+    color: $white;
+    padding: 18px 26px;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.1rem;
+    transition: 0.2s ease;
+    cursor: pointer;
+    background-color: $color3;
+    display: inline-block;
+
+    &--green {
+        background: #15D188;
+    }
+
+    &--blackFont {
+        color: $blackf;
+
+        &--purple {
+            background: #A334FB;
+        }
+
+        &--green {
+            background: $color5;
+        }
+    }
+
+    &:hover {
+        opacity: 0.8;
+        transform: translateY(2px);
+    }
 }
 
 ::-webkit-scrollbar {
