--- a/assets/style/layout/_section3.scss
+++ b/assets/style/layout/_section3.scss
@@ -50,146 +50,123 @@
             justify-content: space-around;
             max-width: 480px;
             margin: 0 auto;
+            padding-top: 20px;
+        }
+    }
 
-            .network-btn {
-                color: $white;
-                padding: 18px 26px;
-                border-radius: 8px;
-                font-weight: 600;
-                font-size: 1.1rem;
-                transition: 0.2s;
-                cursor: pointer;
-                background-color: $color3;
-                display: inline-block;
-                margin-top: 20px;
-                z-index: 100;
+    &__console {
+        background: $white;
+        padding: 100px 0;
 
-                &:hover {
+        &-container {
+            max-width: 1080px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+
+            &-box {
+                background: #F5F7F9;
+                padding: 26px 40px;
+                max-width: 355px;
+                border-radius: 10px;
+                margin: 0 10px;
+
+
+                h4 {
+                    font-size: 0.9rem;
+                    text-transform: uppercase;
+                    line-height: 1.4;
+                    letter-spacing: 1px;
+                    margin-bottom: 10px;
+                    color: $blackf;
+                }
+
+                p {
+                    font-size: 1rem;
+                    margin: 0 auto;
+                    line-height: 1.4;
                     opacity: 0.8;
-                    transform: translateY(2px);
-                }
-
-                &.netgreen {
-                    background: #15D188;
+                    color: $blackf;
                 }
             }
         }
-    }
-}
 
-.use-console {
-    background: $white;
-    padding: 100px 0;
-
-    &__container {
-        max-width: 1080px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-
-        &--second {
+        &-bigBox {
+            display: flex;
+            max-width: 1060px;
+            margin: 0 auto;
             background: #F5F7F9;
-            padding: 26px 40px;
-            max-width: 355px;
+            padding: 50px;
             border-radius: 10px;
-            margin: 0 10px;
-
-
-            h4 {
-                font-size: 0.9rem;
-                text-transform: uppercase;
-                line-height: 1.4;
-                letter-spacing: 1px;
-                margin-bottom: 10px;
-                color: $blackf;
-            }
-
-            p {
-                font-size: 1rem;
-                margin: 0 auto;
-                line-height: 1.4;
-                opacity: 0.8;
-                color: $blackf;
-            }
-        }
-    }
-
-    &__principal {
-        display: flex;
-        max-width: 1060px;
-        margin: 0 auto;
-        background: #F5F7F9;
-        padding: 50px;
-        border-radius: 10px;
-        position: relative;
-        overflow: hidden;
-
-        &--left {
-            text-align: left;
-
-            h3 {
-                color: $blackf;
-                font-size: 2.8rem;
-                letter-spacing: -2px;
-                line-height: 1.1;
-                margin-bottom: 30px;
-                max-width: 600px;
-            }
-
-            p {
-                color: $blackf;
-                margin-bottom: 10px;
-                font-size: 1rem;
-                font-weight: 500;
-                line-height: 1.4;
-                opacity: 0.8;
-                max-width: 590px;
-            }
-
-            a {
-                color: #3131F0;
-                text-decoration: underline;
-            }
-        }
-
-        &--right {
-            background: url("../img/console2.png") left center;
-            width: 35%;
-            position: absolute;
-            right: 0%;
-            top: 0px;
-            bottom: 0px;
+            position: relative;
             overflow: hidden;
-            border-radius: 10px 0 0 10px;
-            background-size: cover;
+
+            &-textContent {
+                text-align: left;
+
+                h3 {
+                    color: $blackf;
+                    font-size: 2.8rem;
+                    letter-spacing: -2px;
+                    line-height: 1.1;
+                    margin-bottom: 30px;
+                    max-width: 600px;
+                }
+
+                p {
+                    color: $blackf;
+                    margin-bottom: 10px;
+                    font-size: 1rem;
+                    font-weight: 500;
+                    line-height: 1.4;
+                    opacity: 0.8;
+                    max-width: 590px;
+                }
+
+                a {
+                    color: #3131F0;
+                    text-decoration: underline;
+                }
+            }
+
+            &-img {
+                background: url("../img/console2.png") left center;
+                width: 35%;
+                position: absolute;
+                right: 0%;
+                top: 0px;
+                bottom: 0px;
+                overflow: hidden;
+                border-radius: 10px 0 0 10px;
+                background-size: cover;
+            }
+        }
+    }
+
+    &__partnairs {
+        background: $white;
+        padding-top: 30px;
+
+
+        h4 {
+            color: $greyf2;
+            font-size: 0.9rem;
+            letter-spacing: 1px;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+            font-weight: 600;
         }
 
-    }
-}
+        &-logo {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding-bottom: 100px;
 
-.use-partnairs {
-    background: $white;
-    padding-top: 30px;
-
-
-    h4 {
-        color: $greyf2;
-        font-size: 0.9rem;
-        letter-spacing: 1px;
-        margin-bottom: 40px;
-        text-transform: uppercase;
-        font-weight: 600;
-    }
-
-    &__logo {
-        max-width: 1100px;
-        margin: 0 auto;
-        padding-bottom: 100px;
-
-        img {
-            height: 30px;
-            margin: 30px;
+            img {
+                height: 30px;
+                margin: 30px;
+            }
         }
     }
 }
