--- a/assets/style/layout/_section4.scss
+++ b/assets/style/layout/_section4.scss
@@ -1,12 +1,11 @@
 .section-techno {
-    background: $black2;
 
-    &_container {
+    &__container {
         max-width: 1100px;
         margin: 0 auto;
         padding: 100px 0;
 
-        &__header {
+        &-header {
 
             h2 {
                 font-size: 6.8rem;
@@ -25,11 +24,11 @@
             }
         }
 
-        &__info {
+        &-info {
             display: flex;
             justify-content: space-between;
 
-            &--content {
+            &-content {
                 max-width: 430px;
                 margin: 10px;
                 min-width: 220px;
@@ -38,13 +37,13 @@
                 border-radius: 20px;
                 background: $grey2;
 
-                &_img {
+                &-img {
                     img {
                         border-radius: 20px 20px 0 0;
                     }
                 }
 
-                &_text {
+                &-text {
                     padding: 30px;
                     border-radius: 0 0 20px 20px;
                     margin-top: -5px;
@@ -70,7 +69,6 @@
                 &:hover {
                     scale: 1.08;
                     background: $grey4;
-                    box-shadow: 0 82px 54px -50px rgba(0, 0, 0, 0.5);
                 }
             }
         }
